--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 .form {
     width: 463px;
     height: 362px;
-    background: rgba(100%, 100%, 100%, 50%);
+    background: rgba(255, 255, 255, 50%);
     text-align: center;
     border-radius: 0 16px 0 16px;
     padding: 23px;
