--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
     backdrop-filter: blur(10px);
     text-align: center;
     border-radius: 0 16px 0 16px;
-    padding: 23px;
+    padding: 23px 0;
 }
 
 .form h3 {
@@ -48,17 +48,17 @@
 
 
 input {
-    height: 48px;
+    height: 52px;
     border: none;
     padding-left: 5px;
     font-size: 16px;
     font-weight: 400;
-    width: 306px;
+    width: 380px;
     border-radius: 8px;
 }
 
 #btn {
-    width: 306px;
+    width: 350px;
     height: 55px;
     border: none;
     border-radius: 8px;
