--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
     background: rgba(247, 247, 247, 15%);
     backdrop-filter: blur(10px);
     text-align: center;
-    border-radius: 0 16px 0 16px;
+    border-radius: 16px;
     padding: 23px 0;
 }
 
