--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ input {
   width: 350px;
   height: 55px;
   border: none;
-  border-radius: 8px;
+  border-radius: 0 8px 8px 8px;
   font-size: 14px;
   font-weight: 400;
   cursor: pointer;
