--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
   background: rgba(247, 247, 247, 15%);
   backdrop-filter: blur(10px);
   text-align: center;
-  border-radius: 16px 0 16px 16px;
+  border-radius: 16px;
   padding: 23px 0;
 }
 
@@ -60,7 +60,7 @@ input {
   width: 350px;
   height: 55px;
   border: none;
-  border-radius: 0 8px 8px 8px;
+  border-radius: 8px;
   font-size: 14px;
   font-weight: 400;
   cursor: pointer;
