--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .wrapper {
@@ -16,7 +17,7 @@
 .form {
   width: 420px;
   height: 480px;
-  background: rgba(247, 247, 247, 15%);
+  background: rgba(247, 247, 247, 0.07);
   backdrop-filter: blur(10px);
   text-align: center;
   border-radius: 16px;
@@ -102,3 +103,4 @@ input {
     width: 100%;
   }
 }
+
